--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://j90064edu05-sys.github.io/investment-dashboard",
   "name": "investment-dashboard",
   "private": true,
   "version": "0.0.0",
